added jar task to build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,24 @@ repositories {
     mavenCentral()
 }
 
+// https://stackoverflow.com/a/4894308/2700520
+jar {
+    manifest {
+        attributes "Main-Class": "schwimmer.nasa.neo.NeoFrame"
+    }
+
+    // this will put all the dependencies in the jar file
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.google.inject:guice:4.2.3'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:3.3.3'
 }
